--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,120 @@
+anyio==3.2.1
+appnope==0.1.2
+argon2-cffi==20.1.0
+async-generator==1.10
 attrs==21.2.0
-brotlipy==0.7.0
+backcall==0.2.0
+beautifulsoup4==4.9.3
+bleach==3.3.0
+bqplot==0.12.29
+branca==0.4.2
+cachetools==4.2.2
 certifi==2021.5.30
-cffi==1.14.4
+cffi==1.14.5
 chardet==4.0.0
-click==7.1.2
-click-plugins==1.1.1
-cligj==0.7.2
-conda==4.10.1
-conda-package-handling==1.7.3
-cryptography==3.4.7
-Fiona==1.8.4
-GDAL==2.3.3
-geopandas==0.6.1
+click==8.0.1
+colour==0.1.5
+cycler==0.10.0
+decorator==5.0.9
+defusedxml==0.7.1
+earthengine-api==0.1.270
+entrypoints==0.3
+ffmpeg-python==0.2.0
+folium==0.12.1
+future==0.18.2
+geeadd==0.5.5
+geemap==0.8.17
+geocoder==1.38.1
+google-api-core==1.30.0
+google-api-python-client==1.12.8
+google-auth==1.32.0
+google-auth-httplib2==0.1.0
+google-cloud-core==1.7.0
+google-cloud-storage==1.39.0
+google-crc32c==1.1.2
+google-resumable-media==1.3.1
+googleapis-common-protos==1.53.0
+googledrivedownloader==0.4
+httplib2==0.19.1
+httplib2shim==0.0.3
 idna==2.10
-mamba==0.1.2
-mkl-fft==1.3.0
-mkl-random==1.2.1
-mkl-service==2.3.0
-munch==2.5.0
-numpy==1.20.2
-pandas==1.2.4
+ipyevents==0.8.2
+ipyfilechooser==0.4.4
+ipykernel==5.5.5
+ipyleaflet==0.14.0
+ipynb-py-convert==0.4.6
+ipython==7.24.1
+ipython-genutils==0.2.0
+ipytree==0.2.1
+ipywidgets==7.6.3
+jedi==0.18.0
+Jinja2==3.0.1
+jsonschema==3.2.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+jupyter-server==1.8.0
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+kiwisolver==1.3.1
+logzero==1.7.0
+MarkupSafe==2.0.1
+matplotlib==3.4.2
+matplotlib-inline==0.1.2
+mistune==0.8.4
+mss==6.1.0
+nbclient==0.5.3
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.0
+numpy==1.21.0
+packaging==20.9
+pandas==1.2.5
+pandocfilters==1.4.3
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.2.0
 pip==21.1.2
-pycosat==0.6.3
+plotly==5.0.0
+prometheus-client==0.11.0
+prompt-toolkit==3.0.19
+protobuf==3.17.3
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.20
-pyOpenSSL==20.0.1
-pyproj==1.9.6
-PySocks==1.7.1
+PyCRS==1.0.2
+Pygments==2.9.0
+pyparsing==2.4.7
+pyrsistent==0.17.3
+pyshp==2.1.3
+python-box==5.3.0
 python-dateutil==2.8.1
 pytz==2021.1
+pyzmq==22.1.0
+ratelim==0.1.6
 requests==2.25.1
-Rtree==0.9.7
-ruamel-yaml-conda==0.15.80
+rsa==4.7.2
+sankee==0.0.5
+Send2Trash==1.7.1
 setuptools==52.0.0.post20210125
-Shapely==1.6.4.post1
 six==1.16.0
-tqdm==4.61.1
+sniffio==1.2.0
+soupsieve==2.2.1
+tenacity==7.0.0
+terminado==0.10.1
+testpath==0.5.0
+tornado==6.1
+traitlets==5.0.5
+traittypes==0.2.1
+uritemplate==3.0.1
 urllib3==1.26.5
+voila==0.2.10
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.1.0
 wheel==0.36.2
+whitebox==1.5.1
+whiteboxgui==0.3.0
+widgetsnbextension==3.5.1
